--- a/noticia/index.html
+++ b/noticia/index.html
@@ -3,17 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos Muller</title>
-    <link rel="stylesheet"  type="text/css" href="assets/css/estilo.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>
-        Carlos Müller: PDI allana domicilio de fotógrafo denunciado por acoso sexual a menores</h1>
-        <img src="assets/img/carlos.jpg" width="350px;" height="200px;">
-        <p>Por orden del Séptimo Juzgado de Garantía de Santiago este martes la Policía de Investigaciones allanó el domicilio del reconocido fotógrafo Carlos Müller, acusado hace algunos días de abuso sexual contra menores de edad.</p>
-        <p>Según La Tercera, a las 23:00 horas de este 21 de abril un grupo de 12 funcionarios de la PDI llegó hasta el departamento del profesional en la comuna de Santiago para incautar computadores, algunos equipos de fotografía y su teléfono celular.</p>
-        <p>El fotógrafo, reconocido por su trabajo en el ámbito musical, es investigado por el Ministerio Público por los presuntos delitos de estupro, abuso sexual de mayores de 14 años, producción, adquisición y almacenamiento de material pornográfico infantil.</p>
-        <p>"Él está tranquilo esperando que se desarrolle la investigación y con total disposición a colaborar, ya que por sobre todas las cosas desea que se esclarezcan las graves imputaciones en su contra", dijo al periódico Ramón Sepúlveda, el abogado que representará a Müller en este caso.</p>
-        <p>En los próximos días Carlos Müller será citado a declarar a la fiscalía.</p>
+    <header>
+        <h1>Cinthya Noticias</h1>
+    </header>
+    <nav>
+        noticias concursos horóscopo
+    </nav>
+    <main>
+        <section>
+            <article>
+                <h2>Cambio de gabinete: Piñera privilegia a partidos para enfrentar “tercera y última etapa”</h2>
+                <h4>Presidente busca retomar el control de su gobierno con un nuevo diseño político, cediendo poder a la UDI y a RN en La Moneda y sumando a dirigentes de las distintas tendencias internas.</h4>
+                <p>Eran las 15.40 de ayer y Gonzalo Blumel salió de La Moneda, entre aplausos, junto a Claudio Alvarado. Ambos habían dejado hacía dos horas sus cargos de ministros del Interior y Segpres, respectivamente, y se subieron juntos a una camioneta blanca conducida por el jefe de asesores del Ministerio del Interior, Andrés Sotomayor. Blumel -a quien antes de subirse al vehículo el exjefe de prensa del Presidente Sebastián Piñera Juan José Bruna le pidió sacarse una selfie- se subió de copiloto, mientras Alvarado, con los ojos llorosos, se sentó atrás, desde donde se despidió por la ventana.</p>
+                <p>De esta manera, Blumel y Alvarado sellaban su salida del gobierno tras haber estado juntos en la primera administración de Piñera y de haber estrechado lazos en esta segunda. Y, de paso, salía el último integrante del círculo de colaboradores que acompañó al actual Mandatario los cuatros años del exgobierno de Bachelet en la fundación Chile Avanza.
+
+                </p>
+                <p>A ambos el Presidente les pidió quedarse, ofreciéndoles distintas alternativas, pero se negaron. No obstante, jugaron un rol clave en el diseño del quinto cambio de gabinete del Mandatario que se concretó ayer, con modificaciones en el comité político y en algunas carteras sectoriales, con lo que Piñera apuesta a una “tercera etapa”, como les comentó a los flamantes ministros, tras la ceremonia del cambio. Así, terminó arribando a Interior Víctor Pérez (UDI); a la Segegob, Jaime Bellolio (UDI); a Defensa, Mario Desbordes (RN) en reemplazo de Alberto Espina; a Cancillería, Andrés Allamand (RN) en lugar de Teodoro Ribera y un enroque entre Cristián Monckeberg (RN), que pasó de Desarrollo Social a la Segpres, y Karla Rubilar, desde la Segegob a Desarrollo Social.</p>
+                <p>Un diseño con el que el Mandatario apostó para sortear la crisis en Chile Vamos, que se consagró con la derrota que sufrieron la semana pasada en el Congreso con el despacho del proyecto de ley que permite el 10% del retiro del fondo de pensiones, y un malestar que se había originado, principalmente, por la decisión de no vetar la norma que establece el límite a la reelección de autoridades.</p>
+
+
+            </article>
+        </section>
+        <aside>
+
+            <ul>
+                <li>Tito Fernández, El Temucano: “No quiero ser recordado”</li>
+                <li>La escasa relación entre Víctor Pérez y Piñera, y cómo eso marca la ruta del nuevo gabinete</li>
+                <li>Larroulet, el sobreviviente al ajuste ministerial</li>
+            </ul>
+        </aside>
+    </main>
+    <footer> Derechos reservados Cinthya Palma Horstmeier </footer>
+    
 </body>
 </html>
