--- a/noticia/index.html
+++ b/noticia/index.html
@@ -39,7 +39,7 @@
                     <li>Larroulet, el sobreviviente al ajuste ministerial</li>
                 </ul>
             </aside>
-            <div class="clear">jjjjjjjjj</div>
+            <div class="clear"></div>
         </section>
 
     </main>
